[metadata]
name = pac_kage
description = mock package
version = 0.0.1

[options]
python_requires = >= 3.8
packages = find:
install_requires =
    prefect

[options.packages.find]
exclude =
    docs

[options.extras_require]
docs =
    jupytext>=1.11.2  # support for myst markdown notebooks
    sphinxcontrib-prefecttask @ git+https://github.com/sphinx-contrib/prefecttask.git#egg=sphinxcontrib-prefecttask
    sphinxcontrib-prefectviz
    myst-nb
    sphinx
    sphinx-autodoc-typehints
    sphinx-copybutton
    sphinx-inline-tabs
    sphinx-material
